plugins {
    id 'java'
    id 'application'
    id "org.sonarqube" version "7.2.2.6593"
}

group 'es.jklabs.desktop'
version '0.12.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = "es.jklabs.BeyondDeploy"
}

distributions {
    main {
        contents {
            from("README.md") {
                into ""
            }
        }
    }
}

processResources {
    filesMatching("app.properties") {
        expand(version: project.version)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.0'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.797'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'commons-io:commons-io:2.21.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
}
